[workspace]
resolver = "3"
members = ["ios_backup_core", "ios_backup_cli", "ios_backup_web"]

[workspace.package]
description = "Decode Manifest.mbdb and extract files from iOS backups"
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
missing_errors_doc = { level = "allow", priority = 1 }