[package]
name = "ios_backup_cli"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.49.0", features = ["io-util", "macros", "rt", "rt-multi-thread", "fs"] }
ios_backup_core = { version = "0.1.0", path = "../ios_backup_core" }

[lints]
workspace = true
