[package]
name = "ios_backup_core"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0"
sha1 = "0.10"
infer = "0.19.0"
tokio = { version = "1.49.0", features = ["io-util", "macros", "rt"] }
futures = "0.3.32"
indexmap = "2.13.0"

[lints]
workspace = true
