[package]
name = "ios_backup_web"
description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
byte-unit = "5.2.0"
console_error_panic_hook = "0.1.7"
futures-util = { version = "0.3.32", features = ["io"] }
ios_backup_core = { version = "0.1.0", path = "../ios_backup_core"}
js-sys = "0.3.89"
leptos = { version = "0.8.15", features = ["csr"] }
tokio = { version = "1.49.0", features = ["io-util", "time"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
wasm-bindgen-futures = "0.4.62"
wasm-streams = "0.5.0"
web-sys = { version = "0.3.85", features = ["BlobPropertyBag", "File", "FileList", "HtmlOptionElement", "Navigator", "ServiceWorkerContainer", "ServiceWorker", "HtmlIFrameElement"] }
async_zip = { version = "0.0.18", features = ["deflate", "tokio"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[lints]
workspace = true

